--- a/app/sass/pages/_main_page.scss
+++ b/app/sass/pages/_main_page.scss
@@ -185,36 +185,63 @@
     height: auto;
     margin: 0 0 24px 24px;
   }
+  .container--contacts-form-section-info {
+    margin-bottom: 32px;
+  }
+  .feedback-form-popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    max-height: 100%;
+    overflow-y: auto;
+    z-index: 100;
+    &.show {
+      display: block;
+    }
+  }
+  .page-contacts-form {
+    position: relative;
+    z-index: 2;
+    background-color: #fff;
+    padding: 28px 30px 20px 30px;
+    margin: 62px auto 0 auto;
+    max-width: 488px;
+    width: 100%;
+    box-shadow: 0px 3px 7px 1px rgba(0, 0, 0, 0.23);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    background-image: url("../images/dest/DSC_8893.jpg");
+    @media screen and (max-width: 1300px) {
+      margin: 0 auto;
+    }
+  }
+  .page-contacts-form-title {
+    margin-bottom: 24px;
+    font-size: 24px;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: $accent;
+  }
+  .page-contacts-form-section {
+    margin-bottom: 55px;
+  }
   .page-contacts-form-text {
     font-size: 18px;
     margin-bottom: 12px;
   }
   .page-contacts-form-col {
-    max-width: calc((100% - 16px) / 2);
-    flex-basis: calc((100% - 16px) / 2);
-    margin-right: 16px;
-    &:nth-child(2n) {
-      margin-right: 0;
-    }
-    @media screen and (max-width: $mobile-bp) {
-      max-width: 100%;
-      flex-basis: 100%;
-      margin-right: 0;
-    }
+    max-width: 100%;
+    flex-basis: 100%;
   }
   .page-contacts-form-item-col {
-    max-width: calc((100% - 16px) / 2);
-    flex-basis: calc((100% - 16px) / 2);
-    margin-right: 16px;
-    &:nth-child(2n) {
-      margin-right: 0;
-    }
-    @media screen and (max-width: 550px) {
-      max-width: 100%;
-      flex-basis: 100%;
-      margin-right: 0;
-    }
+    max-width: 100%;
+    flex-basis: 100%;
   }
+
   .page-contacts-form-item-col--2 {
     max-width: 100%;
     flex-basis: 100%;
@@ -235,7 +262,7 @@
     line-height: 1.5;
     background-color: #fff;
     &:focus {
-      border-color: #a5a5a5;
+      border-color: #2b2b2b;
       outline: none;
     }
   }
@@ -247,6 +274,7 @@
   .page-contacts-form-btns {
     display: flex;
     padding-top: 12px;
+    margin-bottom: 20px;
     @media screen and (max-width: $mobile-bp) {
       flex-direction: column;
     }
@@ -267,6 +295,9 @@
       &::after {
         opacity: 1;
       }
+    }
+    &:focus + .page-contacts-form-checkbox-fake {
+      border-color: #2b2b2b;
     }
   }
   .page-contacts-form-checkbox-fake {
@@ -298,7 +329,6 @@
   }
   .page-contacts-form-btn {
     padding: 12px 32px 10px;
-    margin-left: auto;
     background-color: #592c82;
     font-size: 18px;
     font-weight: 300;
@@ -317,6 +347,9 @@
         background-color: #592c82;
       }
     }
+  }
+  .page-contacts-form-btn--submit {
+    margin-left: auto;
     @media screen and (max-width: $mobile-bp) {
       margin-left: 0;
     }
@@ -327,11 +360,41 @@
     background-image: url("../images/dest/dd-arrow.png");
     appearance: none;
     padding: 10px 30px 10px 18px;
+    cursor: pointer;
   }
-  .container--contacts-form-section-info {
-    margin-bottom: 32px;
+  .page-contacts-form-sub-text {
+    text-align: right;
+    font-weight: 300;
+    font-size: 12px;
   }
-  .page-contacts-form-section {
-    margin-bottom: 55px;
+  .feedback-form-popup-overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+  }
+  .page-contacts-form-btn-close {
+    position: absolute;
+    right: 12px;
+    top: 12px;
+    width: 24px;
+    height: 24px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    background-image: url("data:image/svg+xml,%3Csvg enable-background='new 0 0 512.001 512.001' viewBox='0 0 512.001 512.001' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='%23272727' d='m284.286 256.002 221.857-221.858c7.811-7.811 7.811-20.475 0-28.285s-20.475-7.811-28.285 0l-221.858 221.858-221.857-221.858c-7.811-7.811-20.475-7.811-28.285 0s-7.811 20.475 0 28.285l221.857 221.857-221.857 221.858c-7.811 7.811-7.811 20.475 0 28.285 3.905 3.905 9.024 5.857 14.143 5.857s10.237-1.952 14.143-5.857l221.856-221.857 221.857 221.857c3.905 3.905 9.024 5.857 14.143 5.857s10.237-1.952 14.143-5.857c7.811-7.811 7.811-20.475 0-28.285z'/%3E%3C/svg%3E");
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+  .page-contacts-form-btn--contacts {
+    display: block;
+    margin: 24px auto 0 auto;
+  }
+  .page-contacts-form-capcha {
+    @media screen and (max-width: $mobile-bp) {
+      margin-bottom: 24px;
+    }
   }
 }
