--- a/app/sass/pages/_main_page.scss
+++ b/app/sass/pages/_main_page.scss
@@ -5,6 +5,8 @@
   .page-contacts-breadcrumbs {
     display: flex;
     font-size: 14px;
+    padding-bottom: 12px;
+    border-bottom: 1px solid #bebebe;
   }
   .page-contacts-breadcrumbs-item {
     color: $textcolor;
